syntax = "proto2";

message DpPolyPathConfig {
  optional int32 sample_points_num_each_level = 1;
  optional double step_length_max = 2;
}
